--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Zewen Chi"
   avatar           : "me-profile.jpg"
-  bio              : "PhD at Beijing Institute of Technology. Interned at Microsoft Research and ByteDance."
+  bio              : "Researcher at Microsoft Research. Previously interned at Mila and ByteDance."
   location         : "Beijing, China"
   employer         :
   pubmed           : 
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/zewen-chi-781534171/"
+  linkedin         : "zewen-chi-781534171/"
   orcid            : 
   pinterest        :
   soundcloud       :
